--- a/UIs/nLine.ui
+++ b/UIs/nLine.ui
@@ -431,7 +431,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-TSPEcR/src/qrc/icons.qrc">
             <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
           </property>
          </widget>
@@ -461,7 +461,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-TSPEcR/src/qrc/icons.qrc">
             <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
           </property>
          </widget>
@@ -475,7 +475,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-TSPEcR/src/qrc/icons.qrc">
             <normaloff>:/icons/saveTxt.png</normaloff>:/icons/saveTxt.png</iconset>
           </property>
          </widget>
@@ -486,7 +486,7 @@
            <string>...</string>
           </property>
           <property name="icon">
-           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+           <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-TSPEcR/src/qrc/icons.qrc">
             <normaloff>:/icons/savePDF.png</normaloff>:/icons/savePDF.png</iconset>
           </property>
          </widget>
@@ -540,6 +540,7 @@
    <addaction name="actionAntialias"/>
    <addaction name="separator"/>
    <addaction name="actionRemove"/>
+   <addaction name="actionExtract"/>
   </widget>
   <widget class="QStatusBar" name="statusBar">
    <property name="font">
@@ -634,7 +635,7 @@
   </action>
   <action name="actionSavePDF">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-TSPEcR/src/qrc/icons.qrc">
      <normaloff>:/icons/savePDF.png</normaloff>:/icons/savePDF.png</iconset>
    </property>
    <property name="text">
@@ -646,7 +647,7 @@
   </action>
   <action name="actionRemove">
    <property name="icon">
-    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc">
+    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-TSPEcR/src/qrc/icons.qrc">
      <normaloff>:/icons/remove.png</normaloff>:/icons/remove.png</iconset>
    </property>
    <property name="text">
@@ -654,6 +655,18 @@
    </property>
    <property name="toolTip">
     <string>remove line</string>
+   </property>
+  </action>
+  <action name="actionExtract">
+   <property name="icon">
+    <iconset resource="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-TSPEcR/src/qrc/icons.qrc">
+     <normaloff>:/icons/regionExtract.png</normaloff>:/icons/regionExtract.png</iconset>
+   </property>
+   <property name="text">
+    <string>remove</string>
+   </property>
+   <property name="toolTip">
+    <string>Extract path in new image</string>
    </property>
   </action>
  </widget>
@@ -683,7 +696,7 @@
   <tabstop>colorButton</tabstop>
  </tabstops>
  <resources>
-  <include location="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-Lvo0i4/src/qrc/icons.qrc"/>
+  <include location="../../../../../../private/var/folders/0v/r34b88ss03z9spv7tk_cs0nr0000gp/T/qtc-cmake-TSPEcR/src/qrc/icons.qrc"/>
  </resources>
  <connections/>
 </ui>
